// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic renders as expected 1`] = `
<div
  className="clearfix bg-darken5 round"
>
  <div
    className="fr py6 px6"
  >
    <CopyButton
      block={true}
      className="btn btn--xs py3 px3 round"
      text="the text you copy the text you copy the text you copy the text you copy the text you copy "
    />
  </div>
  <div
    className="py6 px12 txt-mono txt-s"
    data-test="copiable-text-el"
    onBlur={[Function]}
    onFocus={[Function]}
    tabIndex="-1"
  >
    <div
      className="my3"
    >
      the text you copy the text you copy the text you copy the text you copy the text you copy 
    </div>
  </div>
</div>
`;

exports[`basic shows copy hint when focused 1`] = `
<div
  className="clearfix bg-darken5 round"
>
  <div
    className="fr py6 px6"
  >
    <CopyButton
      block={true}
      className="btn btn--xs py3 px3 round"
      text="the text you copy the text you copy the text you copy the text you copy the text you copy "
    />
  </div>
  <div
    className="py6 px12 txt-mono txt-s"
    data-test="copiable-text-el"
    onBlur={[Function]}
    onFocus={[Function]}
    tabIndex="-1"
  >
    <div
      className="my3"
    >
      the text you copy the text you copy the text you copy the text you copy the text you copy 
    </div>
  </div>
  <Popover
    accessibleTitle="Copy the selected text"
    alignment="center"
    allowPlacementAxisChange={true}
    clickOutsideCloses={true}
    coloring="light"
    containWithinViewport={true}
    escapeCloses={true}
    getAnchorElement={[Function]}
    hasPointer={true}
    hideWhenAnchorIsOffscreen={true}
    padding="small"
    placement="top"
    receiveFocus={true}
    trapFocus={false}
  >
    <div
      className="txt-s"
    >
      <span>
        <span
          className="txt-kbd"
        >
          eh+C
        </span>
         
        to copy
      </span>
    </div>
  </Popover>
</div>
`;
